...
        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="AlbumView" customModule="BSImagePicker" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="600" height="30"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XBJ-wa-q8C">
                    <rect key="frame" x="8" y="0.0" width="584" height="30"/>
                    <state key="normal" title="Button">
                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                </button>
            </subviews>
            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
            <constraints>
...
